Configurando conexão ao banco de dados.

--- a/FitCardCRUD/FitCardCRUD/Web.config
+++ b/FitCardCRUD/FitCardCRUD/Web.config
@@ -4,6 +4,9 @@
   http://go.microsoft.com/fwlink/?LinkId=169433
   -->
 <configuration>
+  <connectionStrings>
+    <add name="TESTEDU_CONNECTIONSTRING" connectionString="Data Source=104.41.60.212;Initial Catalog=TesteDu; User ID=usTesteDu;Password=p5a9RdtuPh9tGADV" providerName="System.Data.SqlClient" />
+  </connectionStrings>
   <system.web>
     <compilation debug="true" targetFramework="4.5.2"/>
     <httpRuntime targetFramework="4.5.2"/>
