--- a/FitCardCRUD/FitCardCRUD/FitCardCRUD.csproj
+++ b/FitCardCRUD/FitCardCRUD/FitCardCRUD.csproj
@@ -109,7 +109,12 @@
     <Content Include="Web.config" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Models\Categoria.cs" />
+    <Compile Include="Models\Estabelecimento.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Controllers\" />
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
