Inclusão do ddl de categorias e valições de campos obrigatórios e validações de email.

--- a/FitCardCRUD/FitCardCRUD/FitCardCRUD.csproj
+++ b/FitCardCRUD/FitCardCRUD/FitCardCRUD.csproj
@@ -208,6 +208,7 @@
     <Compile Include="Models\Estabelecimento.cs" />
     <Compile Include="Models\FitCardCRUDContext.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ViewModel\EstabecimentoViewModel.cs" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
