--- a/FitCardCRUD/FitCardCRUD/FitCardCRUD.csproj
+++ b/FitCardCRUD/FitCardCRUD/FitCardCRUD.csproj
@@ -205,6 +205,7 @@
     </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\Categoria.cs" />
+    <Compile Include="Models\CategSuperMercadoTelObgt.cs" />
     <Compile Include="Models\Estabelecimento.cs" />
     <Compile Include="Models\FitCardCRUDContext.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
